# ComfyUI-1hewNodes

./: .gitattributes  .gitignore  .gitignoregit  README.ZH_CN.md  README.md  __init__.py  github_release_agent_prompt.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  adobe.py  batch.py  condition.py  conversion.py  coordinate_nodes.py  detect.py  image.py  image_blend.py  image_crop.py  image_hlfreq.py  image_nodes.py  image_tile.py  logic.py  mask.py  multi.py  text.py  util.py
nodes/audio/: audio_duration.py
nodes/batch/: image_batch_extract.py  image_batch_group.py  image_batch_index.py  image_batch_range.py  image_batch_split.py  image_batch_uniform.py  image_list_append.py  mask_batch_math_ops.py  mask_batch_range.py  mask_batch_split.py  video_cut_group.py
nodes/color/: match_brightness_contrast.py
nodes/condition/: __init__.py  text_encode_qwen_image_edit_keep_size.py
nodes/conversion/: image_batch_to_list.py  image_list_to_batch.py  image_to_mask.py  image_to_url.py  mask_batch_to_list.py  mask_list_to_batch.py  mask_to_image.py  mask_to_sam3_box.py  string_coordinate_to_bbox_mask.py  string_coordinate_to_bboxes.py  text_list_to_string.py  text_to_any.py  url_to_video.py
nodes/detect/: __init__.py  detect_guideline.py  detect_remove_bg.py  detect_remove_bg_refine.py  detect_yolo.py
nodes/image/: __init__.py  image_add_label.py  image_alpha_clean.py  (+17 more)
prompt/: example_prompt.json
utils/: __init__.py
web/: dynamic_port.js  load_image.js  load_video.js  output_label.js  save_video.js  text_preview.js
(+567 files in other folders)
