[project]
name = "ComfyUI-1hewNodes"
description = "This is a custom node collection for ComfyUI that provides some utility nodes."
version = "1.2.34"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/1hew/ComfyUI-1hewNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wangyihe1127"
DisplayName = "ComfyUI-1hewNodes"
Icon = ""
